# maestro-worker-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: quality.yml
maestro_worker_python/: cli.py  config.py  convert_files.py  download_file.py  get_duration.py  health.py  init.py  kill_process.py  load_worker.py  parse_input.py  prepare_audios.py  response.py  run_upload_server.py  serve.py  server.py  timer.py  upload_files.py  upload_server.py  utils.py
maestro_worker_python/data/: .gitignore  Dockerfile  docker-compose.yaml  requirements.txt  worker.py
maestro_worker_python/scaffold/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  worker.py
maestro_worker_python/worker-example/: Dockerfile  requirements.txt
maestro_worker_python/worker_example/: docker-compose.yaml  requirements.txt  worker.py
tests/: test_convert_files.py  test_downlaod_file.py  test_download_file.py  test_entry_points.py  test_get_duration.py  test_health.py  test_init.py  test_load_worker.py  test_parse_input.py  test_prepare_audios.py  test_response.py  test_serve.py  test_server.py  upload_files.py
