[tool.poetry]
name = "maestro-worker-python"
version = "2.2.0"
description = "Utility to run workers on Moises/Maestro"
authors = ["Moises.ai"]
license = "MIT"
readme = "README.md"
packages = [{include = "maestro_worker_python"}]
exclude = ["tests/**/*"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "~0.88.0"
json-logging = "^1.3.0"
uvicorn = "^0.20"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-httpserver = "^1.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
maestro-server = "maestro_worker_python.server:main"
maestro-cli = "maestro_worker_python.cli:main"
maestro-init = "maestro_worker_python.init:main"
