[tool.poetry]
name = "maestro-worker-python"
version = "3.5.4"
description = "Utility to run workers on Moises/Maestro"
authors = ["Moises.ai"]
license = "MIT"
readme = "README.md"
packages = [{include = "maestro_worker_python"}]
exclude = ["tests/**/*"]

[tool.poetry.dependencies]
python = "^3.9"
json-logging = ">=1.3,<2"
uvicorn = ">=0.34.0,<0.34.3"
sentry-sdk = {version = ">=1.16,<3", extras = ["fastapi"]}
requests = ">=2.31,<3"
psutil = ">=6.0.0,<7.1"
fastapi = ">=0.100.0,<0.115.13"
pydantic-settings = ">=2.9,<3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-httpserver = "^1.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
maestro-server = "maestro_worker_python.server:main"
maestro-cli = "maestro_worker_python.cli:main"
maestro-init = "maestro_worker_python.init:main"
maestro-upload-server = "maestro_worker_python.run_upload_server:main"

