[project]
name = "maestro-worker-python"
version = "4.0.0"
description = "Utility to run workers on Moises/Maestro"
readme = "README.md"
requires-python = ">3.9,<3.14"
license = "MIT"
authors = [{ name = "Moises.ai" }]
dependencies = [
  "fastapi>=0.100.0,<0.115.13",
  "json-logging>=1.3,<2",
  "psutil>=6.0.0,<7.1",
  "pydantic-core>=2.9,<3",
  "pydantic-settings>=2.9,<3",
  "requests>=2.31,<3",
  "sentry-sdk[fastapi]>=1.16,<3",
  "uvicorn>=0.34.0,<0.34.3",
]

[project.scripts]
maestro-cli = "maestro_worker_python.cli:main"
maestro-init = "maestro_worker_python.init:main"
maestro-server = "maestro_worker_python.server:main"
maestro-upload-server = "maestro_worker_python.run_upload_server:main"

[dependency-groups]
dev = [
  "pytest>=7.2,<8",
  "pytest-httpserver>=1.0.6,<2",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
